== Edge
  * Bug Fixes
    * Fix Rakefile 'release' task (tag pushing was missing origin)
    * Ensure that RedCloth is loaded when textilize filter is used (#183)

== 0.6.1
  * Bug Fixes
    * Fix Markdown Pygments prefix and suffix (#178)

== 0.6.0
  * Major Enhancements
    * Proper plugin system (#19, #100)
    * Add safe mode so unsafe converters/generators can be added
    * Maruku is now the only processor dependency installed by default.
      Other processors will be lazy-loaded when necessary (and prompt the
      user to install them when necessary) (#57)
  * Minor Enhancements
    * Inclusion/exclusion of future dated posts (#59)
    * Generation for a specific time (#59)
    * Allocate site.time on render not per site_payload invocation (#59)
    * Pages now present in the site payload and can be used through the
      site.pages and site.html_pages variables
    * Generate phase added to site#process and pagination is now a generator
    * Switch to RakeGem for build/test process
    * Only regenerate static files when they have changed (#142)
    * Allow arbitrary options to Pygments (#31)
    * Allow URL to be set via command line option (#147)
  * Bug Fixes
    * Render highlighted code for non markdown/textile pages (#116)
    * Fix highlighting on Ruby 1.9 (#65)
    * Fix extension munging when pretty permalinks are enabled (#64)
    * Stop sorting categories (#33)
    * Preserve generated attributes over front matter (#119)
    * Fix source directory binding using Dir.pwd (#75)

== 0.5.7 / 2010-01-12
  * Minor Enhancements
    * Allow overriding of post date in the front matter (#62, #38)
  * Bug Fixes
    * Categories isn't always an array (#73)
    * Empty tags causes error in read_posts (#84)
    * Fix pagination to adhere to read/render/write paradigm
  * Test Enhancement
    * cucumber features no longer use site.ports.first where a better
      alternative is available

== 0.5.6 / 2010-01-08
  * Bug Fixes