@@ -2,6 +2,7 @@
   * Bug Fixes
     * Fix Rakefile 'release' task (tag pushing was missing origin)
     * Ensure that RedCloth is loaded when textilize filter is used (#183)
+    * Expand source, destination, and plugin paths (#180)
 
 == 0.6.1
   * Bug Fixes
